# kb

./: .gitignore  .gitmodules  .yamllint.yml  404.html  CHANGELOG.md  CNAME  README.md  Taskfile.yml  index.html  mkdocs.yml  sitemap.xml  tags.json
.github/workflows/: mkdocs.yml  pipeline.yml
SRE/: slurm.io.md
SRE/grafana-dashboards/: README.md
ansible/: README.md  install_roles.yml
ansible/1.vagrant-ansible/: README.MD  playbook_example.yml
ansible/gitops/: Taskfile.yml  macos-env.yml
ansible/roles.galaxy/: requirements.yml
ansible/vagrant-ansible-sandbox/: README.md  Vagrantfile  ansible.cfg  playbook.yml
aws_boto3/: README.md
aws_boto3_ansible/: awsp.py
aws_s3game/pirates/: README.md
blog/2022-11-23-pl-engineering/: index.html
blog/2023-01-13-irsa/: index.html
cncf/: index.html
docops/: index.html
docs/: p1.md
documentation/: CNAME  Dockerfile  docker-compose.yml  mkdocs.yml
dotfiles/: .xonshrc  .zshrc  Taskfile.yml  dotfiles.j2  starship.toml
home/: index.html
k8s/: notes.md
k8s-ingress-fastapi/: README.md  k8s.yml
k8s/observability/2.zabbix/: Dockerfile  Makefile  README.md  config.yml  pyproject.toml  zabbix-values.yml  zbx_export_templates.json
k8s/observability/2.zabbix/zabbix/: zabbix.py  zbxtg.py
k8s/playground/11.pypi/heads-tails/: README.md  pyproject.toml
k8s/playground/11.pypi/heads-tails/heads_tails/: main.py
kke/: index.html
mywebsite/: Dockerfile  main.py  requirements.txt
search/: search_index.json
terraform/: README.md
vagrant_ansible/: README.MD  Vagrantfile  hosts.txt  playbook_example.yml
(+536 files in other folders)
